feat(domain): completar módulos Actor y Schedule + refactor de Servicios y reglas de negocio
- Finalización de módulos Actor y Schedule con entidades, atributos y validaciones básicas.
- Refactor del módulo Service:
  - Introducción de Value Objects (ServiceId, ServiceCode, ServiceStatus, ServiceCategory, Money, Duration).
  - Reglas de negocio encapsuladas en VOs (unicidad de código, estado activo/inactivo, validación de duración).
- Implementación de método de ciclo de vida en Service (deactivate).
- Definición de reglas de negocio distribuidas entre Service, Appointment, Billing y Contract.
- Creación de catálogo estático inicial de servicios odontológicos (ServiceCatalog VO con enum interno).
- Documentación de criterios BDD para Servicios, Facturación, Pagos, Administración e Integraciones.
- Ajustes de consistencia en naming y validaciones (no null, no blank).

Este commit integra más de lo planeado inicialmente, consolidando la base de dominio clínico y administrativo.